# pyMyweblog

./: .env.sample  README.md  UPGRADE_PROMPT.md  pyproject.toml  setup.cfg
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test-lint.yml
pyMyweblog/: client.py
scripts/: booking_cli.py  myweblog.py  test_get_balance.py  test_get_bookings.py  test_get_objects.py
tests/: __init__.py  test_client.py
