[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMyweblog"
version = "0.1.0"
description = "A Python library for interacting with the MyWebLog API."
readme = "README.md"
authors = [{ name = "Your Name", email = "marcus.karlsson@usa.net" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/faanskit/pyMyweblog"
Repository = "https://github.com/faanskit/pyMyweblog"
Issues = "https://github.com/faanskit/pyMyweblog/issues"