[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMyweblog"
version = "0.2.0"
description = "A Python library for interacting with the MyWebLog API"
readme = "README.md"
authors = [{ name = "Marcus Karlsson", email = "marcus.karlsson@usa.net" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://github.com/faanskit/pyMyweblog"
Repository = "https://github.com/faanskit/pyMyweblog"
Issues = "https://github.com/faanskit/pyMyweblog/issues"

[tool.setuptools.packages.find]
include = ["pyMyweblog*"]