[metadata]
name = pyMyweblog
version = 0.1.0
description = A Python library for interacting with the MyWebLog API.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/pyMyweblog
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0

[options.packages.find]
include = pyMyweblog*