[metadata]
name = pyMyweblog
version = 0.0.1
description = A Python library for interacting with the MyWebLog API
long_description = file: README.md
long_description_content_type = text/markdown
author = Marcus Karlsson
author_email = marcus.karlsson@usa.net
url = https://github.com/faanskit/pyMyweblog 
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp>=3.8.0

[options.packages.find]
include = pyMyweblog*